deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: kubedoom 
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1  
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      hostNetwork: true
      serviceAccountName: kubedoom
      containers:
      - image: storaxdev/kubedoom:0.5.0
        name: kubedoom
        ports:
        - containerPort: 5900
          protocol: TCP
