postgres-my-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - image: postgres:10.13
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
